change main div to overflow:auto to fix div size

--- a/HW3/CSS/assignment-3.css
+++ b/HW3/CSS/assignment-3.css
@@ -36,7 +36,7 @@ footer {
 
 .main_div {
     width: 85vw;
-    height: 95vw;
+    overflow: auto;
     position: relative;
     top: -70px;
     left: 5vw;
